--- a/code/Exercise6.ipynb
+++ b/code/Exercise6.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "source": [
     "import numpy as np\r\n",
     "import pandas as pd\r\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "source": [
     "# Load the terrain\r\n",
     "terrain1_file = \"SRTM_data_Norway_1.tif\"\r\n",
@@ -835,7 +835,7 @@
     "ax1.title.set_text(\"Terrain to predict\")\r\n",
     "ax1.set_xlabel(\"X\"); ax1.set_ylabel(\"Y\")\r\n",
     "surf1 = ax1.imshow(img1, cmap='gray')\r\n",
-    "ax2.title.set_text(\"Preducted terrain using OLS\")\r\n",
+    "ax2.title.set_text(\"Predicted terrain using OLS\")\r\n",
     "ax2.set_xlabel(\"X\"); ax2.set_ylabel(\"Y\")\r\n",
     "surf2 = ax2.imshow(z_hat, cmap='gray')\r\n",
     "plt.show()\r\n",
@@ -848,7 +848,7 @@
     "ax1.view_init(elev=60., azim=-120.0-70)\r\n",
     "ax1.plot_surface(x1, y1, z1, cmap=cm.coolwarm, linewidth = 0, antialiased=False)\r\n",
     "ax2 = fig.add_subplot(1,2,2, projection='3d')\r\n",
-    "ax2.title.set_text(\"3D plot of Preducted terrain using OLS\")\r\n",
+    "ax2.title.set_text(\"3D plot of predicted terrain using OLS\")\r\n",
     "ax2.set_xlabel(\"x\"); ax2.set_ylabel(\"y\"); ax2.set_zlabel(\"z\")\r\n",
     "ax2.view_init(elev=60., azim=-120.0-70)\r\n",
     "ax2.plot_surface(x1, y1, z_hat, cmap=cm.coolwarm, linewidth = 0, antialiased=False)\r\n",
@@ -903,7 +903,7 @@
    "execution_count": 51,
    "source": [
     "testDegree = 150\r\n",
-    "#testDegree = 4\r\n",
+    "testDegree = 4\r\n",
     "patches_1_preds = []\r\n",
     "X = create_X(x1, y1, testDegree) # Design Matrix\r\n",
     "X_scaled = standard_scaling(X)\r\n",
@@ -922,7 +922,7 @@
     "ax1.title.set_text(\"Terrain1 (resized)\")\r\n",
     "ax1.set_xlabel(\"X\"); ax1.set_ylabel(\"Y\")\r\n",
     "surf1 = ax1.imshow(terrain1Resized, cmap='gray')\r\n",
-    "ax2.title.set_text(f\"Terrain1 - OLS predicted\\nDegree used:{testDegree}\")\r\n",
+    "ax2.title.set_text(f\"Terrain1 - OLS predicted\\nDegrees used:{testDegree}\")\r\n",
     "ax2.set_xlabel(\"X\"); ax2.set_ylabel(\"Y\")\r\n",
     "surf2 = ax2.imshow(terrain1_predicted, cmap='gray')\r\n",
     "plt.savefig(f\"{REPORT_FIGURES}terrain_OLSpredicted_degree{testDegree}.pdf\")\r\n",
