--- a/code/Exercise6.ipynb
+++ b/code/Exercise6.ipynb
@@ -328,10 +328,13 @@
    "source": [
     "# 2D plot of the terrain patches\r\n",
     "fig, (ax1, ax2) = plt.subplots(1, 2)\r\n",
-    "ax1.title.set_text(f\"Terrain patch from terrain1\\nMean:{np.mean(img1)}\\Variance:{np.var(img1)}\")\r\n",
+    "ax1.title.set_text(f\"Terrain patch from terrain1\\nMean:\\\r\n",
+    "{np.round(np.mean(img1),decimals=1)}\\nVariance: {np.round(np.var(img1),decimals=1)}\")\r\n",
     "ax1.set_xlabel(\"X\"); ax1.set_ylabel(\"Y\")\r\n",
     "surf1 = ax1.imshow(img1, cmap='gray')\r\n",
-    "ax2.title.set_text(\"Terrain patch from terrain2\")\r\n",
+    "\r\n",
+    "ax2.title.set_text(F\"Terrain patch from terrain2\\nMean:\\\r\n",
+    "{np.round(np.mean(img2),decimals=1)}\\nVariance: {np.round(np.var(img2),decimals=1)}\")\r\n",
     "ax2.set_xlabel(\"X\"); ax2.set_ylabel(\"Y\")\r\n",
     "surf2 = ax2.imshow(img2, cmap='gray')\r\n",
     "plt.show()\r\n",
@@ -352,9 +355,7 @@
     "#ax2.view_init(elev=60., azim=-120.0)\r\n",
     "ax2.view_init(elev=-45., azim=-85.0)\r\n",
     "ax2.plot_surface(x2, y2, z2, cmap=cm.coolwarm, linewidth = 0, antialiased=False)\r\n",
-    "plt.show()#-91 -75\r\n",
-    "\r\n",
-    "-85 -45"
+    "plt.show()#-91 -75\r\n"
    ],
    "outputs": [],
    "metadata": {}
@@ -503,19 +504,23 @@
    "source": [
     "X = create_X(x1, y1, 50) # Design Matrix\r\n",
     "X_scaled = standard_scaling(X)\r\n",
-    "z1_scaled = standard_scaling(z1.ravel().reshape(-1,1))\r\n",
+    "z1_scaled, scaler = standard_scaling(z1.ravel().reshape(-1,1))\r\n",
     "\r\n",
     "# Model construction, fitting, and predictions\r\n",
     "model = OLS(degree=optimal_degree) # The model\r\n",
     "z_hat_train = model.fit(X_scaled, z1_scaled, SVDfit=False, keep_intercept=True) # Fitting the model and predict on training data\r\n",
-    "z_hat = z_hat_train.reshape((ySteps,xSteps))\r\n",
+    "\r\n",
+    "z_hat = scaler.inverse_transform(z_hat_train)\r\n",
+    "z_hat = z_hat.reshape((ySteps,xSteps))\r\n",
     "\r\n",
     "# 2D plot of the terrain patches\r\n",
     "fig, (ax1, ax2) = plt.subplots(1, 2)\r\n",
-    "ax1.title.set_text(\"Terrain to predict\")\r\n",
+    "ax1.title.set_text(F\"Terrain to predict\\nMean:\\\r\n",
+    "{np.round(np.mean(img1),decimals=1)}\\nVariance: {np.round(np.var(img1),decimals=1)}\")\r\n",
     "ax1.set_xlabel(\"X\"); ax1.set_ylabel(\"Y\")\r\n",
     "surf1 = ax1.imshow(img1, cmap='gray')\r\n",
-    "ax2.title.set_text(\"Predicted terrain using OLS\")\r\n",
+    "ax2.title.set_text(F\"Predicted terrain using OLS\\nMean:\\\r\n",
+    "{np.round(np.mean(z_hat),decimals=1)}\\nVariance: {np.round(np.var(z_hat),decimals=1)}\")\r\n",
     "ax2.set_xlabel(\"X\"); ax2.set_ylabel(\"Y\")\r\n",
     "surf2 = ax2.imshow(z_hat, cmap='gray')\r\n",
     "plt.show()\r\n",
@@ -854,10 +859,10 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.11 64-bit ('pytorch1': conda)"
+   "display_name": "Python 3.8.11 64-bit ('pytorch_lightning': conda)"
   },
   "interpreter": {
-   "hash": "4100b45d1ec7c24b8fe1569d39871ffb9fcc213dcc50046fc68fe247fbf6e84f"
+   "hash": "cdd16a4e159c1067d9dfa51729b478ccc85a4bb59359633d71fef71fb1a46b1f"
   }
  },
  "nbformat": 4,
