Tried to implement a manual_scaler, tested on Ex2

--- a/code/Exercise2.ipynb
+++ b/code/Exercise2.ipynb
@@ -73,7 +73,9 @@
     "    #model= make_pipeline(PolynomialFeatures(degree=degree), LinearRegression(fit_intercept=False)) \n",
     "    X = common.create_X(x, y, n=degree)\n",
     "    #print(f\"X.shape:{X.shape}\")    \n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, z.reshape(-1,1), test_size=0.2)\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, z.reshape(-1,1), test_size=0.2, shuffle=True)\n",
+    "    \n",
+    "    #X_train, X_test, y_train, y_test = common.prepare_data(X, z.reshape(-1,1), scale_X=True, scale_t=True, zero_center=True)\n",
     "\n",
     "    #print(z.shape)\n",
     "    #reshape for broadcasting in MSE_test and MSE_val  \n",
@@ -84,20 +86,25 @@
     "    #y_train = np.reshape(y_train, newshape=(y_train.shape[0],1))\n",
     "    #TODO: why scale?!?\n",
     "\n",
-    "    scaler = StandardScaler()\n",
-    "    scaler.fit(X_train)\n",
-    "    X_train_scaled = scaler.transform(X_train)\n",
-    "    X_test_scaled = scaler.transform(X_test)\n",
+    "    # Commenting out the standard scaler, to try an implementation based on manual scaling as presented in the lecture notes\n",
+    "    #scaler = StandardScaler()\n",
+    "    #scaler.fit(X_train)\n",
+    "    #X_train_scaled = scaler.transform(X_train)\n",
+    "    #X_test_scaled = scaler.transform(X_test)\n",
+    "    X_train = X_train - np.mean(X_train,axis=0)\n",
+    "    X_test = X_test - np.mean(X_test,axis=0)\n",
+    "    y_train = y_train - np.mean(y_train,axis=0)\n",
+    "    y_test = y_test - np.mean(y_test,axis=0)\n",
     "    y_pred = np.empty((y_test.shape[0], n_bootstraps))\n",
     "    y_fit = np.empty((y_train.shape[0], n_bootstraps))\n",
     "    \n",
     "    for i in range(n_bootstraps):\n",
     "        #bootstrap:\n",
-    "        x_, y_ = resample(X_train_scaled, y_train)\n",
+    "        x_, y_ = resample(X_train, y_train)\n",
     "        #fit model to x_,y_ sample:\n",
     "        clf =  LinearRegression().fit(x_, y_)\n",
     "        #fit model and predict on test data:\n",
-    "        y_pred[:, i] = clf.predict(X_test_scaled).ravel()\n",
+    "        y_pred[:, i] = clf.predict(X_test).ravel()\n",
     "        #predict on train data:\n",
     "        y_fit[:,i] = clf.predict(x_).ravel()\n",
     "        \n",
