--- a/code/Exercise4.ipynb
+++ b/code/Exercise4.ipynb
@@ -20,7 +20,7 @@
     "from common import *\n",
     "import pandas as pd\n",
     "#from mpl_toolkits.mplot3d import Axes3D\n",
-    "from sklearn.linear_model import Lasso, Ridge, LinearRegression\n",
+    "import sklearn.linear_model as lm\n",
     "\n",
     "print(f\"Root directory: {os.getcwd()}\")\n",
     "\n",
@@ -34,6 +34,11 @@
     "%matplotlib inline "
    ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
    "metadata": {}
   },
   {
@@ -78,26 +83,45 @@
     "z_test_ridge = pd.DataFrame()\n",
     "z_hat_test_ridge = pd.DataFrame()\n",
     "\n",
-    "for lam in lambdas:\n",
+    "\n",
+    "z_hat_train_ridge_sk = pd.DataFrame()\n",
+    "z_hat_test_ridge_sk = pd.DataFrame()\n",
+    "\n",
+    "for lmb in lambdas:\n",
+    "    model_sk = lm.Ridge(lmb, fit_intercept=False)\n",
     "    #X_train, X_test, z_train, z_test = prepare_data(X, z, test_size=0.2, shuffle=True, scale_X=False, scale_t=False)\n",
     "    X_train, X_test, z_train, z_test = prepare_data(X, z, test_size=0.2, shuffle=True, scale_X=False, scale_t=False, random_state=4155)\n",
-    "    model = RidgeRegression(lam) # The model\n",
+    "    model = RidgeRegression(lmb) # The model\n",
     "    model.fit(X_train, z_train) # Fitting the model\n",
+    "\n",
+    "    # Fitting the scikit Ridge model\n",
+    "    model_sk.fit(X_train, z_train)\n",
     "   \n",
-    "    # Predictions\n",
+    "    # Predictions our Ridge model\n",
     "    z_hat_train = model.predict(X_train) # predict on train data\n",
     "    z_hat_test = model.predict(X_test) # predict on test data\n",
     "\n",
+    "    # Predictions sklearn Ridge\n",
+    "    z_hat_train_sk = model_sk.predict(X_train) # predict on train data\n",
+    "    z_hat_test_sk = model_sk.predict(X_test) # predict on test data\n",
+    "\n",
     "    # Filling up dataframes\n",
-    "    z_train_ridge[lam] = z_train.flatten() \n",
-    "    z_hat_train_ridge[lam] = z_hat_train.flatten()\n",
-    "    z_test_ridge[lam] = z_test.flatten()\n",
-    "    z_hat_test_ridge[lam] = z_hat_test.flatten()\n",
+    "    z_train_ridge[lmb] = z_train.flatten() \n",
+    "    z_hat_train_ridge[lmb] = z_hat_train.flatten()\n",
+    "    z_test_ridge[lmb] = z_test.flatten()\n",
+    "    z_hat_test_ridge[lmb] = z_hat_test.flatten()\n",
+    "\n",
+    "    # Filling up sk dataframes\n",
+    "    z_hat_train_ridge_sk[lmb] = z_hat_train_sk.flatten()\n",
+    "    z_hat_test_ridge_sk[lmb] = z_hat_test_sk.flatten()\n",
     "\n",
     "\n",
     "# MSE calculations for all lambda values\n",
     "mse_scores_train = ((z_train_ridge - z_hat_train_ridge) ** 2).mean()\n",
     "mse_scores_test = ((z_test_ridge - z_hat_test_ridge) ** 2).mean()\n",
+    "mse_scors_train_sk = ((z_train_ridge - z_hat_train_ridge_sk) ** 2).mean()\n",
+    "mse_scores_test_sk = ((z_test_ridge - z_hat_test_ridge_sk) ** 2).mean()\n",
+    "\n",
     "# R2 calculations for all lambda values\n",
     "R2_scores_train = 1 - ((z_train_ridge - z_hat_train_ridge) ** 2).sum() / ((z_train_ridge - z_train_ridge.mean())**2).sum() \n",
     "R2_scores_test = 1 - ((z_test_ridge - z_hat_test_ridge) ** 2).sum() / ((z_test_ridge - z_test_ridge.mean())**2).sum()  \n",
@@ -106,6 +130,90 @@
     "plt.figure(figsize=(12,8))\n",
     "plt.plot(-np.log(lambdas), mse_scores_train, label=\"Training data\")\n",
     "plt.plot(-np.log(lambdas), mse_scores_test, label=\"Test data\")\n",
+    "\n",
+    "plt.plot(-np.log(lambdas), mse_scors_train_sk, 'm--', label=\"Training data sklearn\")\n",
+    "plt.plot(-np.log(lambdas), mse_scores_test_sk, 'y--', label=\"Test data sklearn\")\n",
+    "\n",
+    "#plt.plot(mse_scores_train,-np.log(lambdas), label=\"Training data\")\n",
+    "#plt.plot(mse_scores_test,-np.log(lambdas), label=\"Test data\")\n",
+    "plt.xlabel(\"log(lambda)\")\n",
+    "plt.ylabel(\"MSE\")\n",
+    "plt.title(\"Training evaluation on Ridge regression fit\")\n",
+    "plt.legend()\n",
+    "plt.savefig(f\"{REPORT_FIGURES}franke_function_Ridge_evaluate_fit.pdf\")"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Perform the same analysis as above, but with scaled data and fit intercept equal to false"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "nbf_lambdas = 10\n",
+    "lambdas = np.logspace(-5,5, nbf_lambdas)\n",
+    "z_train_ridge = pd.DataFrame()\n",
+    "z_hat_train_ridge = pd.DataFrame()\n",
+    "z_test_ridge = pd.DataFrame()\n",
+    "z_hat_test_ridge = pd.DataFrame()\n",
+    "\n",
+    "\n",
+    "z_hat_train_ridge_sk = pd.DataFrame()\n",
+    "z_hat_test_ridge_sk = pd.DataFrame()\n",
+    "\n",
+    "for lmb in lambdas:\n",
+    "    model_sk = lm.Ridge(lmb, fit_intercept=True)\n",
+    "    #X_train, X_test, z_train, z_test = prepare_data(X, z, test_size=0.2, shuffle=True, scale_X=False, scale_t=False)\n",
+    "    X_train, X_test, z_train, z_test = prepare_data(X, z, test_size=0.2, shuffle=True, scale_X=False, scale_t=False, random_state=4155)\n",
+    "    model = RidgeRegression(lmb) # The model\n",
+    "    model.fit(X_train, z_train, keep_intercept=False) # Fitting the model\n",
+    "\n",
+    "    # Fitting the scikit Ridge model\n",
+    "    model_sk.fit(X_train, z_train)\n",
+    "   \n",
+    "    # Predictions our Ridge model\n",
+    "    z_hat_train = model.predict(X_train) # predict on train data\n",
+    "    z_hat_test = model.predict(X_test) # predict on test data\n",
+    "\n",
+    "    # Predictions sklearn Ridge\n",
+    "    z_hat_train_sk = model_sk.predict(X_train) # predict on train data\n",
+    "    z_hat_test_sk = model_sk.predict(X_test) # predict on test data\n",
+    "\n",
+    "    # Filling up dataframes\n",
+    "    z_train_ridge[lmb] = z_train.flatten() \n",
+    "    z_hat_train_ridge[lmb] = z_hat_train.flatten()\n",
+    "    z_test_ridge[lmb] = z_test.flatten()\n",
+    "    z_hat_test_ridge[lmb] = z_hat_test.flatten()\n",
+    "\n",
+    "    # Filling up sk dataframes\n",
+    "    z_hat_train_ridge_sk[lmb] = z_hat_train_sk.flatten()\n",
+    "    z_hat_test_ridge_sk[lmb] = z_hat_test_sk.flatten()\n",
+    "\n",
+    "\n",
+    "# MSE calculations for all lambda values\n",
+    "mse_scores_train = ((z_train_ridge - z_hat_train_ridge) ** 2).mean()\n",
+    "mse_scores_test = ((z_test_ridge - z_hat_test_ridge) ** 2).mean()\n",
+    "mse_scors_train_sk = ((z_train_ridge - z_hat_train_ridge_sk) ** 2).mean()\n",
+    "mse_scores_test_sk = ((z_test_ridge - z_hat_test_ridge_sk) ** 2).mean()\n",
+    "\n",
+    "# R2 calculations for all lambda values\n",
+    "R2_scores_train = 1 - ((z_train_ridge - z_hat_train_ridge) ** 2).sum() / ((z_train_ridge - z_train_ridge.mean())**2).sum() \n",
+    "R2_scores_test = 1 - ((z_test_ridge - z_hat_test_ridge) ** 2).sum() / ((z_test_ridge - z_test_ridge.mean())**2).sum()  \n",
+    "\n",
+    "# Plots\n",
+    "plt.figure(figsize=(12,8))\n",
+    "plt.plot(-np.log(lambdas), mse_scores_train, label=\"Training data\")\n",
+    "plt.plot(-np.log(lambdas), mse_scores_test, label=\"Test data\")\n",
+    "\n",
+    "plt.plot(-np.log(lambdas), mse_scors_train_sk, 'm--', label=\"Training data sklearn\")\n",
+    "plt.plot(-np.log(lambdas), mse_scores_test_sk, 'y--', label=\"Test data sklearn\")\n",
+    "\n",
     "#plt.plot(mse_scores_train,-np.log(lambdas), label=\"Training data\")\n",
     "#plt.plot(mse_scores_test,-np.log(lambdas), label=\"Test data\")\n",
     "plt.xlabel(\"log(lambda)\")\n",
