--- a/code/Exercise6.ipynb
+++ b/code/Exercise6.ipynb
@@ -643,18 +643,8 @@
     "print(\"df_degree.shape:\",df_degree.shape)\r\n",
     "display(df_degree)\r\n",
     "\r\n",
-    "\"\"\"\r\n",
-    "fig = plt.figure()\r\n",
-    "plt.errorbar(np.arange(df_degree.shape[0]), df_degree[\"coeff_value\"], yerr = df_degree[\"std_error\"], fmt = 'o', ms=4)\r\n",
-    "plt.title(f\"Beta error OLS - degree{deg}\")\r\n",
-    "plt.xlabel(r\"$\\beta_i$\")\r\n",
-    "plt.ylabel(\"Beta values with Std error\")\r\n",
-    "plt.xticks(np.arange(df_degree.shape[0]))\r\n",
-    "#plt.tight_layout()\r\n",
-    "\"\"\"\r\n",
-    "plot_beta_errors(df_degree, deg)\r\n",
-    "\r\n",
-    "#plt.show()"
+    "fig = plot_beta_errors(df_degree, deg)\r\n",
+    "fig.savefig(f\"{REPORT_FIGURES}{EX6_1}OLS_beta_error.pdf\")"
    ],
    "outputs": [
     {
@@ -1277,7 +1267,7 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "100%|██████████| 8/8 [00:00<00:00, 500.00it/s]\n"
+      "100%|██████████| 8/8 [00:00<00:00, 500.04it/s]\n"
      ]
     },
     {
@@ -1383,7 +1373,7 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "Looping through polynomials up to 10 degrees with 10 bootstraps: 100%|██████████| 10/10 [00:00<00:00, 12.64it/s]\n"
+      "Looping through polynomials up to 10 degrees with 10 bootstraps: 100%|██████████| 10/10 [00:00<00:00, 12.05it/s]\n"
      ]
     },
     {
@@ -1698,7 +1688,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x217f71e1e80>"
+       "<matplotlib.legend.Legend at 0x24b5b7e1eb0>"
       ]
      },
      "metadata": {},
@@ -1790,7 +1780,7 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "Looping through polynomials up to 12 degrees with 100 bootstraps: 100%|██████████| 12/12 [00:06<00:00,  1.74it/s]\n"
+      "Looping through polynomials up to 12 degrees with 100 bootstraps: 100%|██████████| 12/12 [00:06<00:00,  1.82it/s]\n"
      ]
     },
     {
@@ -1809,7 +1799,7 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "Looping through polynomials up to 12 degrees with 100 bootstraps: 100%|██████████| 12/12 [00:06<00:00,  1.75it/s]\n"
+      "Looping through polynomials up to 12 degrees with 100 bootstraps: 100%|██████████| 12/12 [00:06<00:00,  1.84it/s]\n"
      ]
     },
     {
@@ -1828,7 +1818,7 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "Looping through polynomials up to 12 degrees with 100 bootstraps: 100%|██████████| 12/12 [00:06<00:00,  1.72it/s]\n"
+      "Looping through polynomials up to 12 degrees with 100 bootstraps: 100%|██████████| 12/12 [00:06<00:00,  1.82it/s]\n"
      ]
     },
     {
@@ -1847,7 +1837,7 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "Looping through polynomials up to 12 degrees with 100 bootstraps: 100%|██████████| 12/12 [00:07<00:00,  1.71it/s]\n"
+      "Looping through polynomials up to 12 degrees with 100 bootstraps: 100%|██████████| 12/12 [00:06<00:00,  1.83it/s]\n"
      ]
     },
     {
@@ -1866,7 +1856,7 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "Looping through polynomials up to 12 degrees with 100 bootstraps: 100%|██████████| 12/12 [00:06<00:00,  1.73it/s]\n"
+      "Looping through polynomials up to 12 degrees with 100 bootstraps: 100%|██████████| 12/12 [00:06<00:00,  1.83it/s]\n"
      ]
     },
     {
@@ -1885,7 +1875,7 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "Looping through polynomials up to 12 degrees with 100 bootstraps: 100%|██████████| 12/12 [00:07<00:00,  1.70it/s]\n"
+      "Looping through polynomials up to 12 degrees with 100 bootstraps: 100%|██████████| 12/12 [00:06<00:00,  1.71it/s]\n"
      ]
     },
     {
@@ -1904,7 +1894,7 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "Looping through polynomials up to 12 degrees with 100 bootstraps: 100%|██████████| 12/12 [00:07<00:00,  1.69it/s]\n"
+      "Looping through polynomials up to 12 degrees with 100 bootstraps: 100%|██████████| 12/12 [00:06<00:00,  1.79it/s]\n"
      ]
     },
     {
@@ -1923,7 +1913,7 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "Looping through polynomials up to 12 degrees with 100 bootstraps: 100%|██████████| 12/12 [00:06<00:00,  1.74it/s]\n"
+      "Looping through polynomials up to 12 degrees with 100 bootstraps: 100%|██████████| 12/12 [00:06<00:00,  1.79it/s]\n"
      ]
     },
     {
@@ -1942,7 +1932,7 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "Looping through polynomials up to 12 degrees with 100 bootstraps: 100%|██████████| 12/12 [00:07<00:00,  1.70it/s]\n"
+      "Looping through polynomials up to 12 degrees with 100 bootstraps: 100%|██████████| 12/12 [00:06<00:00,  1.79it/s]\n"
      ]
     },
     {
@@ -1961,7 +1951,7 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "Looping through polynomials up to 12 degrees with 100 bootstraps: 100%|██████████| 12/12 [00:07<00:00,  1.71it/s]\n"
+      "Looping through polynomials up to 12 degrees with 100 bootstraps: 100%|██████████| 12/12 [00:06<00:00,  1.77it/s]\n"
      ]
     },
     {
@@ -2046,11 +2036,18 @@
     "#plt.tight_layout()\r\n",
     "\"\"\"\r\n",
     "\r\n",
-    "plot_beta_errors_for_lambdas(summaries_df, optimal_degree)\r\n",
+    "fig = plot_beta_errors_for_lambdas(summaries_df, optimal_degree)\r\n",
+    "fig.savefig(f\"{REPORT_FIGURES}{EX6_4}Ridge_beta_SE_for_lambdas.pdf\")\r\n",
+    "\r\n",
+    "\r\n",
     "#plot.savefig(\".pdf\")\r\n",
     "#plot.show()\r\n",
     "\r\n",
-    "plot_beta_CI_for_lambdas(summaries_df, optimal_degree)\r\n",
+    "#fig = plot_beta_errors(df_degree, deg)\r\n",
+    "#fig.savefig(f\"{REPORT_FIGURES}{EX6_1}OLS_beta_error.pdf\")\r\n",
+    "\r\n",
+    "fig = plot_beta_CI_for_lambdas(summaries_df, optimal_degree)\r\n",
+    "fig.savefig(f\"{REPORT_FIGURES}{EX6_4}Ridge_beta_CI_for_lambdas.pdf\")\r\n",
     "#plot.savefig(\".pdf\")\r\n",
     "#plot.show()"
    ],
@@ -2059,6 +2056,66 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
       "\n",
       "\n",
       "\n",
@@ -2132,72 +2189,6 @@
      "metadata": {
       "needs_background": "light"
      }
-    },
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n"
-     ]
     },
     {
      "output_type": "display_data",
