updates on exc3

--- a/code/Exercise3.ipynb
+++ b/code/Exercise3.ipynb
@@ -59,7 +59,7 @@
     "    print(score)\n",
     "    plt.plot(np.arange(folds), score,\"-o\", label = f\"{folds} folds\")\n",
     "    #plt.plot(np.arange(folds), sk_scores*-1,\"--o\", label = f\"{folds} folds(sk.cv)\")\n",
-    "    plt.xlabel(\"Number of folds used\")\n",
+    "    plt.xlabel(\"fold # used as test data\")\n",
     "    plt.ylabel(\"MSE\")\n",
     "    plt.legend()\n",
     "    mean_folds_error[folds-5] = np.mean(score)\n",
