updates on exc3

--- a/code/Exercise3.ipynb
+++ b/code/Exercise3.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "degree = 2\n",
     "X = create_X(x,y,degree)\n",
-    "t = FrankeFunction(x, y) + 0.5*np.random.randn(n)\n",
+    "t = FrankeFunction(x, y) + 0.3*np.random.randn(n)\n",
     "\n",
     "\n",
     "mean_folds_error = np.zeros(6)\n",
@@ -58,7 +58,7 @@
     "    score = cross_val(k = folds, model = \"OLS\", X = X, z = t)\n",
     "    print(score)\n",
     "    plt.plot(np.arange(folds), score,\"-o\", label = f\"{folds} folds\")\n",
-    "    #plt.plot(np.arange(folds), sk_scores*-1,\"--o\", label = f\"{folds} folds(sk.cv)\")\n",
+    "    plt.plot(np.arange(folds), sk_scores*-1,\"--o\", label = f\"{folds} folds(sk.cv)\")\n",
     "    plt.xlabel(\"fold # used as test data\")\n",
     "    plt.ylabel(\"MSE\")\n",
     "    plt.legend()\n",
